<resources>
    <string name="app_name">Cook Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_navigate">Navigate</string>
    <string name="button_goback">Go Back</string>
    <string name="add_button_text">Add</string>
    <string name="add_the_new_cook_editText_hint">Add the new cook</string>
    <string name="sucessfully_added_cook_message">Cook added successfully</string>
    <string name="empty_field_message">Please enter some text</string>
    <string name="app_description">This is a simple app made to help you figure out which meal to cook next. \n\n
                                    You can add/delete meals and your existing meals are ordered by date. Every day the app will randomly suggest new meals for you. \n\n
        This app is open source and you can visit the git repository for is from <a href="https://github.com/Nour0700/CookReminder">here</a>.</string>
    <string name="about_text">About</string>
    <string name="no_data_text">There is not cook! \n Add some cooks</string>
    <string name="recently_cooked_text">Recently cooked</string>
    <string name="cooked_before_text">Cooked before 4 days</string>
    <string name="sort_in_ascending_order_text">Sort in ascending order</string>
    <string name="sorti_in_descending_order">Sort in descending order</string>
    <string name="add_new_cook_text">Please add new cook</string>
    <string name="welcome">Welcome to Cook Reminder</string>
    <string name="register_or_login">To use our services please register or login</string>
    <string name="sign_in_method">Please choose the preferred way to register or login</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_button">Register or Login</string>
    <string name="log_out">Log out</string>
    <!--    this will fromat string data from the layout file when used-->
    <!--    <string name="quote_format">\"%s\"</string>-->
</resources>