<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="viewModel"
            type="com.example.android.reminder.mainActivity.addFragment.AddViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryLightColor"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_new_cook_text"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_text_field"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/add_the_new_cook_editText_hint"
            android:text="@={viewModel.cookName}" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:background="@color/primaryDarkColor"
            android:onClick="@{() -> viewModel.onAddButtonClicked()}"
            android:text="@string/add_button_text"
            android:textColor="@color/primaryTextColor" />



    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>